--- a/styles/style.css
+++ b/styles/style.css
@@ -266,7 +266,60 @@ color: #000;
 
 }
 
-.order-image {
+.order {
+    background-image: url(../images/order.png);
+    height: 357px;
     background-repeat: no-repeat;
     background-size: cover;
+    margin-top: 122px;
+    position: relative;
+}
+.order-image {
+    background-color: rgba(0,0,0,0.7);
+    height: 357px;
+    background-repeat: no-repeat;
+    background-size: 122px;
+}
+.order-holder {
+    display: flex;
+    justify-content: space-between;
+}
+.order-header {
+    color: #D67E34;
+    font-family: 'Tinos', serif;
+    font-weight: 400;
+    font-size: 52px;
+    text-align: center;
+    margin-top: 80px;
+    width: 628px;
+}
+.order-desk {
+    color: #FFFFFF;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 700p;
+    font-size: 24px;
+    margin-top: 20px;
+}
+.order-btn {
+    background-color: #FF7400;
+    display: flex;
+    position: absolute;
+    right: 400px;
+    top: 152px;
+    width: 180px;
+    height: 60px;
+    transition: background-color 0.3s linear; 
+}
+.order-button {
+    color: #fff;
+    text-decoration: none;
+    padding: 20px 30px;
+    text-align: center;
+    font-size: 14px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 700;
+}
+
+.order-btn:hover {
+    background-color:#7c4212;
 }
